// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default assessments renders cognitive survey 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="mock"
  >
    Survey
  </div>
</div>
`;

exports[`Default assessments renders personality results 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="mock"
  >
    Results
  </div>
</div>
`;

exports[`Default assessments renders personality survey 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="mock"
  >
    Survey
  </div>
</div>
`;

exports[`Default renders nothing if not ready 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
/>
`;

exports[`Default renders results 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="mock"
  >
    Results
  </div>
</div>
`;

exports[`Default renders survey 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="mock"
  >
    Survey
  </div>
</div>
`;
